EZ-1290 set feedback to nullable in spec

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -1119,6 +1119,8 @@ paths:
                 type: integer
               feedback:
                 type: string
+            required:
+              - grade
 
 
   /teacher/courses/{courseId}/exercises/{courseExerciseId}/submissions/latest/students:
