EZ-1294 download submissions service takes optional group ids

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -637,6 +637,18 @@ paths:
                   properties:
                     id:
                       type: string
+                    groups:
+                      type: array
+                      items:
+                        properties:
+                          id:
+                            type: string
+                        required:
+                          - id
+                  required:
+                    - id
+            required:
+              - courses
       responses:
         200:
           description: Zipped file of the submissions as a resource.
