--- a/core/build.gradle
+++ b/core/build.gradle
@@ -97,6 +97,7 @@ dependencies {
 
     // Source code similarity
     implementation 'me.xdrop:fuzzywuzzy:1.2.0'
+    implementation "com.marcinmoskala:DiscreteMathToolkit:1.0.3"
 }
 
 
