EZ-1297 add role teacher, update api, update tests, use html if adoc not present, check access.

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -1646,7 +1646,7 @@ paths:
     put:
       summary: Modify exercise.
       tags:
-        - admin
+        - teacher
       parameters:
         - name: exercise
           in: body
