- refactor ezspa out of wui - add leftbar, rm top menu - refactor wui build - upgrade global kotlin to 1.4.0 - refactor form elements' style, add modals - sry

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,22 +1,6 @@
-// Kotlin/JS plugin resolution
-pluginManagement {
-    resolutionStrategy {
-        eachPlugin {
-            if (requested.id.id == "kotlin2js") {
-                useModule("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
-            }
-            if (requested.id.id == "kotlin-dce-js") {
-                useModule("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
-            }
-            if (requested.id.id == "kotlinx-serialization") {
-                useModule("org.jetbrains.kotlin:kotlin-serialization:${kotlinVersion}")
-            }
-        }
-    }
-}
-
 rootProject.name = 'easy'
 
 include 'wui',
         'core',
-        'aae'
+        'aae',
+        'ezspa'
