EZ-1303 create group service

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -996,6 +996,29 @@ paths:
                 items:
                   $ref: '#/definitions/Group'
 
+    post:
+      summary: Create new group.
+      tags:
+        - teacher
+      parameters:
+        - name: group
+          in: body
+          schema:
+            properties:
+              name:
+                type: string
+            required:
+              - name
+      responses:
+        200:
+          description: Group created.
+          schema:
+            properties:
+              id:
+                type: string
+            required:
+              - id
+
 
   /courses/teacher/{courseId}/grades:
     parameters:
