EZ-1304 api spec fix missing response description

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -1029,6 +1029,7 @@ paths:
         - teacher
       responses:
         200:
+          description: Group deleted.
 
 
   /courses/teacher/{courseId}/grades:
