EZ-1323 add color to create group service, add teacher as manager to created group

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -1894,6 +1894,8 @@ paths:
             properties:
               name:
                 type: string
+              color:
+                type: string
             required:
               - name
       responses:
