EZ-1323 add implicit dir/access and parent dir param to create exercise service

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -1674,6 +1674,8 @@ paths:
           in: body
           schema:
             properties:
+              parent_dir_id:
+                type: string
               title:
                 type: string
               text_html:
