--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,7 +5,7 @@ liquibaseProperties.load(new FileInputStream(
 
 buildscript {
     ext {
-        springBootVersion = '2.3.2.RELEASE'
+        springBootVersion = '2.4.4'
         liquibaseVersion = '2.0.4'
     }
     repositories {
