--- a/core/src/main/resources/application.yaml.sample
+++ b/core/src/main/resources/application.yaml.sample
@@ -28,12 +28,14 @@ easy:
         from: "<from-address>"
         to: "<to-address>"
     auto-assess:
-      timeout-check:
-        cron: "0 * * * * *"
-        clear-older-than:
-          ms: "60000"
-      fixed-delay:
-        ms: "3000"
+        allowed-wait-for-user:
+          ms: "15000"
+        timeout-check:
+          cron: "0 * * * * *"
+          clear-older-than:
+            ms: "60000"
+        fixed-delay:
+          ms: "3000"
     service:
       await-assessment:
         sleep-start-ms: 1000
