core refactor moodle grades sync service and moodle service names

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -1773,7 +1773,7 @@ paths:
                 type: integer
 
 
-  /courses/{courseId}/moodlesync/grades:
+  /courses/{courseId}/moodle/grades:
     parameters:
       - $ref: '#/parameters/CourseId'
     post:
