--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -1744,7 +1744,7 @@ paths:
     parameters:
       - $ref: '#/parameters/CourseId'
     post:
-      summary: One-way link Moodle course students (add access, add pending access and remove student access)
+      summary: Link course with a Moodle course
       tags:
         - admin
       parameters:
@@ -1758,19 +1758,17 @@ paths:
                 type: boolean
               sync_grades:
                 type: boolean
+              force:
+                type: boolean
             required:
               - moodle_short_name
               - sync_students
               - sync_grades
       responses:
         200:
-          description: Number of student access added, pending and removed.
-          schema:
-            properties:
-              students_synced:
-                type: integer
-              pending_students_synced:
-                type: integer
+          description: OK
+        400:
+          description: Code MOODLE_SYNC_IN_PROGRESS - sync is in progress, use force=true to ignore syncing.
 
 
   /courses/{courseId}/moodle/grades:
