core request object deserialization now doesn't provide stupid default values for primitives if the requester doesn't include them

--- a/core/src/main/resources/application.yaml.sample
+++ b/core/src/main/resources/application.yaml.sample
@@ -17,6 +17,9 @@ spring:
           port: 587
           starttls:
             enable: true
+  jackson:
+    deserialization:
+      FAIL_ON_NULL_FOR_PRIMITIVES: true
 
 
 easy:
