EZ-1359 remove teachers from course can be called by teachers

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -817,7 +817,7 @@ paths:
     delete:
       summary: Remove teachers' accesses from course.
       tags:
-        - admin
+        - teacher
       parameters:
         - name: teacher
           in: body
