EZ-1336, EZ-1341 executor balancing: fixed concurrency issue by using delay(), not sleep(), introduced suspend concept, synchronized critical code blocks, use now GlobalScope for coroutines, add more logs, introduced toString for FunctionQueue.kt, use now ConcurrentHashMap, for polling removal, introduced co-routines and await, removed unnecessary loops and app.properties related to polling

--- a/core/src/main/resources/application.yaml.sample
+++ b/core/src/main/resources/application.yaml.sample
@@ -29,18 +29,15 @@ easy:
         to: "<to-address>"
     auto-assess:
         allowed-wait-for-user:
-          ms: "15000"
+          ms: "45000"
         timeout-check:
           cron: "0 * * * * *"
           clear-older-than:
-            ms: "60000"
+            ms: "460000"
         fixed-delay:
           ms: "3000"
-    service:
-      await-assessment:
-        sleep-start-ms: 1000
-        sleep-step-ms: 150
-        timeout-steps: 20
+        fixed-delay-observer-clear:
+          ms: "3000"
 
     moodle-sync:
       users:
