--- a/wui/src/main/kotlin/AppProperties.kt.sample
+++ b/wui/src/main/kotlin/AppProperties.kt.sample
@@ -1,7 +1,9 @@
 
 object AppProperties {
     const val EMS_ROOT = "https://dev.ems.lahendus.ut.ee/v2"
+
     const val KEYCLOAK_CONF_URL = "https://dev.lahendus.ut.ee/static/keycloak.json"
+    const val KEYCLOAK_SILENT_SSO_URL = "https://dev.lahendus.ut.ee/static/keycloak-silent-sso-redirect.html"
     const val KEYCLOAK_TOKEN_MIN_VALID_SEC = 30
 
     const val LOG_DEBUG_ENABLED = true
