EZ-1351, EZ-1392, EZ-1363, EZ-1352, wui add admin console and issue tracker links for admin, leftbar->sidenav, many small cosmetic fixes, fix select focus border colour, use inline svg icons more, add link() funs to Pages, /exerciselib->/library

--- a/wui/src/main/kotlin/AppProperties.kt.sample
+++ b/wui/src/main/kotlin/AppProperties.kt.sample
@@ -5,6 +5,9 @@ object AppProperties {
     const val KEYCLOAK_CONF_URL = "https://dev.lahendus.ut.ee/static/keycloak.json"
     const val KEYCLOAK_SILENT_SSO_URL = "https://dev.lahendus.ut.ee/static/keycloak-silent-sso-redirect.html"
     const val KEYCLOAK_TOKEN_MIN_VALID_SEC = 30
+    const val KEYCLOAK_ADMIN_CONSOLE_URL = "https://dev.idp.lahendus.ut.ee/auth/admin/master/console"
+
+    const val ISSUE_TRACKER_URL = "https://easy.myjetbrains.com/youtrack/issues"
 
     const val LOG_DEBUG_ENABLED = true
     const val LOG_WARN_ENABLED = true
