EZ-1285, EZ-1091 rewrite statistics controller and service to follow better Kotlin and multithreading practises. Also optimize statistics and periodically always push new updates and set update interval in conf file. Remove polling. Restructure and rewrite + refactor caching system and migrate affected code. Use constants for cache names to have better overview

--- a/core/src/main/resources/application.yaml.sample
+++ b/core/src/main/resources/application.yaml.sample
@@ -35,6 +35,9 @@ easy:
           ms: "3000"
         fixed-delay-observer-clear:
           ms: "3000"
+    statistics:
+      fixed-delay:
+        ms: "15000"
 
     moodle-sync:
       users:
