core read course groups service returns self_is_restricted - whether the caller has restricted groups on the course

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -1014,6 +1014,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/definitions/Group'
+              self_is_restricted:
+                type: boolean
 
     post:
       summary: Create new course group.
