--- a/wui/src/main/kotlin/AppProperties.kt.sample
+++ b/wui/src/main/kotlin/AppProperties.kt.sample
@@ -1,5 +1,7 @@
 
 object AppProperties {
+    const val AppName = "Lahendus"
+
     const val EMS_ROOT = "https://dev.ems.lahendus.ut.ee/v2"
 
     const val KEYCLOAK_CONF_URL = "https://dev.lahendus.ut.ee/static/keycloak.json"
@@ -17,7 +19,6 @@ object AppProperties {
     const val MATHJAX_SRC = "https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"
     const val MATHJAX_CONF = "MathJax = {options: {renderActions: {addMenu: [0, '', '']}}};"
 
-    const val GRADE_TABLE_ROWS_ON_PAGE = 50
     const val PARTICIPANTS_ROWS_ON_PAGE = 50
     const val SUBMISSIONS_ROWS_ON_PAGE = 50
 }
