EZ-1458 scheduled course exercise publishing

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -1238,8 +1238,9 @@ paths:
                       type: string
                     grade_threshold:
                       type: integer
-                    student_visible:
-                      type: boolean
+                    student_visible_from:
+                      type: string
+                      format: date-time
                     grades:
                       type: array
                       items:
@@ -1295,8 +1296,9 @@ paths:
               last_modified:
                 type: string
                 format: date-time
-              student_visible:
-                type: boolean
+              student_visible_from:
+                type: string
+                format: date-time
               assessments_student_visible:
                 type: boolean
               grading_script:
@@ -1342,7 +1344,6 @@ paths:
               - grader_type
               - threshold
               - last_modified
-              - student_visible
               - assessments_student_visible
 
 
